// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Inset handles 0 value 1`] = `
{
  "variables": {
    "--rs-inset-all-s": 0,
  },
}
`;

exports[`Styles/Inset handles positive value 1`] = `
{
  "variables": {
    "--rs-inset-all-s": 4,
  },
}
`;

exports[`Styles/Inset handles responsive value 1`] = `
{
  "variables": {
    "--rs-inset-all-l": 2,
    "--rs-inset-all-m": 0,
    "--rs-inset-all-s": 4,
  },
}
`;

exports[`Styles/Inset handles undefined value 1`] = `null`;

exports[`Styles/Inset handles value width defined side 1`] = `
{
  "variables": {
    "--rs-inset-start-s": 4,
  },
}
`;
